# hyperopter

./: .coverage  .gitignore  README.md  configuration_manager.py  data_handler.py  hyperopt_config_sample.json  integration.py  logging_system.py  loss_functions.py  memory_manager.py  optimization_engine.py  parallel_optimizer.py  project_architecture.md  project_overview.md  pyproject.toml  requirements.txt  results_manager.py  setup.py
config/: moving_average_config.json
config_samples/: hyperopt_config_sample.json
examples/: optimize_moving_average.py
examples/data/: sample_data.csv
feature-contracts/: update.md
feature-contracts/Level-1/: configuration-manager.md  data-handler.md  optimization-engine.md
feature-contracts/Level-2/: logging-system.md  results-manager.md
feature-contracts/Level-3/: memory-manager.md  parallel-optimizer.md
feature-contracts/Level-4/: integration.md
feature-contracts/Level-5/: calmar-ratio-loss.md  drawdown-loss.md  loss-functions-base.md  profit-loss.md  recommendation.md  sharpe-ratio-loss.md  sortino-ratio-loss.md
results/results/: optimization_results_20241209_115215.json  optimization_results_20241209_115330.json
strategies/: __init__.py  moving_average.py
tests/: README.md  requirements.txt  test_configuration_manager.py  test_data_handler.py  test_integration.py  test_logging_system.py  test_loss_functions.py  test_memory_manager.py  test_optimization_engine.py  test_parallel_optimizer.py  test_profit_loss.py  test_results_manager.py  test_sharpe_ratio_loss.py  test_sortino_ratio_loss.py
(+8 files in other folders)
