[tool.poetry]
name = "hyperopter"
version = "0.1.0"
description = ""
authors = ["Marwin Steiner <marwin.steiner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
optuna = "^4.1.0"
jsonschema = "^4.23.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
loguru = "^0.7.2"
psutil = "^6.1.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
